closes #6 - Projetos funcionando devidamente

--- a/script/style.css
+++ b/script/style.css
@@ -47,3 +47,119 @@ body {
   .containerimg:hover .overlay {
     opacity: 1;
   }
+  .boxgeral{
+    background-color: black;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    width: 1000px;
+    align-items: center;
+}
+.containertexto{
+    box-shadow: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.principal,
+.acompanhamentos,
+.dados{
+    align-items: center;
+    text-align: center;
+    box-shadow: 0px 0px 15px gray;
+    padding: 10px;
+    margin: 20px;
+    border-radius: 0.8rem;
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(247, 247, 247);
+}
+.itens{
+    margin: 20px;
+    width: 180px;
+    box-shadow: 0px 0px 15px gray;
+    border-radius: 0.8rem;
+    padding: 10px;
+    font-size: 18px;
+}
+
+.preco{
+    color: green;
+}
+.imgmenu{
+    display: flex;
+    flex-direction: row;
+}
+
+
+
+
+
+
+
+/* -- quantity box -- */
+
+.quantity {
+    display: flex;
+    flex-direction: row;
+    justify-content: center
+    
+}
+
+.quantity .input-text.qty {
+    width: 35px;
+    height: 39px;
+    padding: 0 5px;
+    text-align: center;
+    background-color: transparent;
+    border: 1px solid #efefef;
+}
+
+.quantity.buttons_added {
+    text-align: left;
+    position: relative;
+    white-space: nowrap;
+    vertical-align: top;
+}
+
+.quantity.buttons_added input {
+    display: inline-block;
+    margin: 0;
+    vertical-align: top;
+    box-shadow: none;
+}
+
+.quantity.buttons_added .minus,
+.quantity.buttons_added .plus {
+    padding: 7px 10px 8px;
+    height: 41px;
+    background-color: #ffffff;
+    border: 1px solid #efefef;
+    cursor: pointer;
+}
+
+.quantity.buttons_added .minus {
+    border-right: 0;
+}
+
+.quantity.buttons_added .plus {
+    border-left: 0;
+}
+
+.quantity.buttons_added .minus:hover,
+.quantity.buttons_added .plus:hover {
+    background: #eeeeee;
+}
+
+.quantity input::-webkit-outer-spin-button,
+.quantity input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    margin: 0;
+}
+
+.quantity.buttons_added .minus:focus,
+.quantity.buttons_added .plus:focus {
+    outline: none;
+}
